<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/background_login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/logo"
        android:contentDescription="Logo"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/inputEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#AAAAAA"
        android:background="@drawable/edittext_rounded_background"
        android:padding="12dp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/inputPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Senha"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#AAAAAA"
        android:background="@drawable/edittext_rounded_background"
        android:padding="12dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Entrar"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OU"
        android:textStyle="bold"
        android:background="@drawable/textview_circle_background"
        android:textColor="#000000"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Entrar com Google"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Criar conta"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Esqueci minha senha"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000" />

</LinearLayout>